--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -1,8 +1,8 @@
 # Visualization {#viz-chapter}
 
 ```{r setup, echo=FALSE, results="asis"}
-#library(rebook)
-#chapterPreamble()
+library(rebook)
+chapterPreamble()
 ```
 
 Whether a data set contains information on a microbial community or it originates from a different source, the way that data are visualized inevitably shapes how they will be interpreted, and motivates the next steps of the analysis.
@@ -13,7 +13,7 @@ This chapter introduces the reader to a number of visualization techniques found
 
 * bar plots
 * box plots
-* heat maps
+* heatmaps
 * ordination charts
 * regression charts
 * trees
@@ -23,7 +23,7 @@ The toolkit which provides the essential plotting functionality includes the fol
 * _patchwork_, _cowplot_, _ggpubr_ and _gridExtra_: plot layout and multi-panel plotting
 * _miaViz_: specific visualization tools for `TreeSummaizedExperiment` objects
 * _scater_: specific visualization tools for `SingleCellExperiment` objects
-* _ggplot2_, _pheatmap_, _ggtree_, _sechm_: composition heat maps
+* _ggplot2_, _pheatmap_, _ggtree_, _sechm_: composition heatmaps
 * _ANCOMBC_, _ALDEx2_ and _Maaslin2_: visual differential abundance
 * _fido_: tree-based methods for differential abundance
 * _plotly_: animated and 3D plotting
@@ -53,7 +53,9 @@ tse <- GlobalPatterns
 
 ### Accessing row and column data
 
-`SCE` and `TSE` objects contain multiple layers of information in the form of rows, columns and meta data. The _scater_ package supports in accessing, modifying and graphing the meta data related to features as well as samples.
+`SCE` and `TSE` objects contain multiple layers of information in the form of
+rows, columns and meta data. The _scater_ package supports in accessing,
+modifying and graphing the meta data related to features as well as samples.
 
 ```{r}
 # list row meta data
@@ -91,19 +93,35 @@ ggplot(coldata, aes(x = SampleType)) +
        y = "Number of Samples")
 ```
 
-Further methods of application can be found in the chapters \@ref(qc) and \@ref(richness) and in a few [external tutorials](https://github.com/davismcc/scater_tutorials_open_data) with open data. Additionally, `rowData` and `colData` allow manipulation and subsetting of large data sets into smaller units, as explained in chapter \@ref(datamanipulation).
+Further methods of application can be found in the chapters \@ref(qc) and
+\@ref(richness) and in a few [external tutorials](https://github.com/davismcc/scater_tutorials_open_data)
+with open data. Additionally, `rowData` and `colData` allow manipulation and
+subsetting of large data sets into smaller units, as explained in chapter \@ref(datamanipulation).
 
 ### Viewing abundance and prevalence patterns
 
-Prior-to-analysis exploration may involve questions such as how microorganisms are distributed across samples (abundance) and what microorganisms are present in most of the samples (prevalence). The information on abundance and prevalence can be summarized into a **jitter** or **density plot** and a **tree**, respectively, with the _miaViz_ package.
+Prior-to-analysis exploration may involve questions such as how microorganisms
+are distributed across samples (abundance) and what microorganisms are present
+in most of the samples (prevalence). The information on abundance and prevalence
+can be summarized into a **jitter** or **density plot** and a **tree**,
+respectively, with the _miaViz_ package.
 
-Specifically, the functions `plotAbundance`, `plotAbundanceDensity` and `plotRowTree` are used, and examples on their usage are discussed throughout chapter \@ref(quality-control).
+Specifically, the functions `plotAbundance`, `plotAbundanceDensity` and
+`plotRowTree` are used, and examples on their usage are discussed throughout
+chapter \@ref(quality-control).
 
 ## Diversity estimation
 
-Alpha diversity is commonly measured as one of the diversity indices explained in chapter \@ref(community-diversity). Because the focus lies on each sample separately, one-dimensional plots, such as **scatter**, **violin** and **box plots**, are suitable. 
+Alpha diversity is commonly measured as one of the diversity indices explained
+in chapter \@ref(community-diversity). Because the focus lies on each sample
+separately, one-dimensional plots, such as **scatter**, **violin** and
+**box plots**, are suitable. 
 
-Beta diversity is generally evaluated as one of the dissimilarity indices reported in chapter \@ref(community-similarity). Unlike alpha diversity, samples are compared collectively to estimate the heterogeneity across them, therefore multidimensional plots, such as **Shepard** and **ordination plots** are suitable.
+Beta diversity is generally evaluated as one of the dissimilarity indices
+reported in chapter \@ref(community-similarity). Unlike alpha diversity,
+samples are compared collectively to estimate the heterogeneity across them,
+therefore multidimensional plots, such as **Shepard** and **ordination plots**
+are suitable.
 
 |                         | alpha diversity            | beta diversity            |
 |:-----------------------:|:--------------------------:|:-------------------------:|
@@ -117,7 +135,8 @@ As a conclusion, visualization techniques for alpha and beta diversity significa
 
 ### Alpha diversity with scatter, violin and box plots
 
-The basic method to visualize the diversity values assigned to the different samples in a `TSE` object includes the following, where each data point represents one sample:
+The basic method to visualize the diversity values assigned to the different
+samples in a `TSE` object includes the following, where each data point represents one sample:
 
 ```{r}
 # estimate shannon diversity index
@@ -129,7 +148,12 @@ tse <- mia::estimateDiversity(tse,
 plotColData(tse, "shannon", colour_by = "SampleType")
 ```
 
-The several indices available for the evaluation of alpha diversity often return slightly divergent results, which can be visually compared with a multiple violin or box plot. For this purpose, `plotColData` (for violin plots) or `ggplot` (for box plots) are recursively applied to a number of diversity indices with the function `lapply` and the multi-panel plotting functionality of the _patchwork_ package is then exploited.
+The several indices available for the evaluation of alpha diversity often return
+slightly divergent results, which can be visually compared with a multiple violin
+or box plot. For this purpose, `plotColData` (for violin plots) or `ggplot`
+(for box plots) are recursively applied to a number of diversity indices with
+the function `lapply` and the multi-panel plotting functionality of the
+_patchwork_ package is then exploited.
 
 ```{r}
 # estimate faith diversity index
@@ -148,11 +172,17 @@ plots <- lapply(c("shannon", "faith"),
 plots[[1]] + plots[[2]]
 ```
 
-The analogous output in the form of a violin plot is obtained in chapter \@ref(faith-diversity). In addition, box plots that group samples according to certain information, such as origin, sex, age and health condition, can be labeled with p-values for significant differences with the package _ggsignif_ package, as shown in chapter \@ref(estimate-diversity).
+The analogous output in the form of a violin plot is obtained in chapter
+\@ref(faith-diversity). In addition, box plots that group samples according to
+certain information, such as origin, sex, age and health condition, can be
+labeled with p-values for significant differences with the package _ggsignif_
+package, as shown in chapter \@ref(estimate-diversity).
 
 ### Beta diversity with Shepard and coordination plots
 
-The _scater_ package offers the general function `plotReducedDim`. In its basic form, it takes a `TSE` object and the results on sample similarity stored in the same object, which can be evaluated with the following coordination methods:
+The _scater_ package offers the general function `plotReducedDim`. In its basic
+form, it takes a `TSE` object and the results on sample similarity stored in the
+same object, which can be evaluated with the following coordination methods:
 
 * `runMDS`
 * `runNMDS`
@@ -160,7 +190,8 @@ The _scater_ package offers the general function `plotReducedDim`. In its basic 
 * `runTSNE`
 * `runUMAP`
 
-Since these clustering techniques allow for multiple coordinates or components, **coordination plots** can also span multiple dimensions, which is explained in chapter \@ref{extras}.
+Since these clustering techniques allow for multiple coordinates or components,
+**coordination plots** can also span multiple dimensions, which is explained in chapter \@ref{extras}.
 
 ```{r}
 # perform NMDS coordination method
@@ -187,7 +218,9 @@ tse <- runMDS(tse,
 plotReducedDim(tse, "MDS", ncomponents = c(1:3), colour_by = "faith")
 ```
 
-Similarly to iterating `plotColData` over indices of alpha diversity, `lapply` can be used in combination with _patchwork_ to recursively apply `plotReducedDim` and visually compare results among various coordination methods.
+Similarly to iterating `plotColData` over indices of alpha diversity, `lapply`
+can be used in combination with _patchwork_ to recursively apply `plotReducedDim`
+and visually compare results among various coordination methods.
 
 ```{r}
 # generate plots for MDS and NMDS methods
@@ -201,15 +234,23 @@ plots[[1]] + plots[[2]] +
   plot_layout(guides = "collect")
 ```
 
-For similar examples, readers are referred to chapter \@ref(community-similarity). Further material on the graphic capabilities of _patchwork_ is available in its [official package tutorial](https://patchwork.data-imaginist.com/articles/patchwork.html).
+For similar examples, readers are referred to chapter \@ref(community-similarity).
+Further material on the graphic capabilities of _patchwork_ is available in its
+[official package tutorial](https://patchwork.data-imaginist.com/articles/patchwork.html).
 
 ## Statistical analysis
 
-### community composition, biclustering and multi-assay analysis with heat maps
+### Heat maps
 
-As described in chapter \@ref(visual-composition), bar plots and heat maps can offer a useful insight into the composition of a community. Simple methods involve the functions `plotAbundance` and `geom_tile` in combination with `scale_fill_gradientn` from the packages _miaViz_ and _ggplot2_, respectively.
+As described in chapter \@ref(visual-composition), bar plots and heatmaps can
+offer a useful insight into the composition of a community. Simple methods involve
+the functions `plotAbundance` and `geom_tile` in combination with `scale_fill_gradientn`
+from the packages _miaViz_ and _ggplot2_, respectively.
 
-For instance, below the composition of multiple samples (x axis) is reported in terms of relative abundances (y axis) for the top 10 taxa at the Order rank. Bar plots and heat maps with analogous information at the Phylum level are available in the aforementioned chapter.
+For instance, below the composition of multiple samples (x axis) is reported
+in terms of relative abundances (y axis) for the top 10 taxa at the Order rank.
+Bar plots and heatmaps with analogous information at the Phylum level are
+available in the aforementioned chapter.
 
 ```{r}
 # agglomerate tse by Order
@@ -236,7 +277,9 @@ plotAbundance(tse_order,
               order_sample_by = "Clostridiales")
 ```
 
-For more sophisticated visualizations than those produced with `plotAbundance` and _ggplot2_, the packages _pheatmap_ and _sechm_ provide methods to include feature and sample clusters in a heat map, along with further functionality.
+For more sophisticated visualizations than those produced with `plotAbundance`
+and _ggplot2_, the packages _pheatmap_ and _sechm_ provide methods to include
+feature and sample clusters in a heatmap, along with further functionality.
 
 ```{r pheatmap1}
 # Agglomerate tse by phylum
@@ -269,7 +312,8 @@ mat <- assay(tse_phylum_subset, "clr_z")
 pheatmap(mat)
 ```
 
-We can cluster both samples and features hierarchically and add them to the x and y axes of the heat map, respectively.
+We can cluster both samples and features hierarchically and add them to the
+x and y axes of the heatmap, respectively.
 
 ```{r pheatmap2}
 # Hierarchical clustering
@@ -317,7 +361,9 @@ rowData(tse_phylum_subset)$clusters <- taxa_clusters[order(match(rownames(taxa_c
 rowData(tse_phylum_subset)$clusters
 ```
 
-Similarly, samples are hierarchically grouped into clusters, the most suitable number of clusters for the plot is selected and the new information is stored into the sample meta data.
+Similarly, samples are hierarchically grouped into clusters, the most suitable
+number of clusters for the plot is selected and the new information is stored
+into the sample meta data.
 
 ```{r pheatmap5}
 # Hierarchical clustering
@@ -369,7 +415,9 @@ pheatmap(mat, annotation_row = taxa_clusters,
          color = colors)
 ```
 
-The package _sechm_ allows for further visual capabilities and flexibility. In this case, the clustering step is automatically performed by the plotting function and does not need to be executed in advance.
+The package _sechm_ allows for further visual capabilities and flexibility.
+In this case, the clustering step is automatically performed by the plotting
+function and does not need to be executed in advance.
 
 ```{r sechm}
 # Stores annotation colros to metadata
@@ -387,7 +435,8 @@ sechm(tse_phylum_subset,
       cluster_cols = TRUE, cluster_rows = TRUE)
 ```
 
-It is also possible to create an analogous heat map by just using the _ggplot2_ package. However, a relatively long code is required to generate an identical output.
+It is also possible to create an analogous heatmap by just using the _ggplot2_
+package. However, a relatively long code is required to generate an identical output.
 
 ```{r more_complex_heatmap}
 # Add feature names to column as a factor
@@ -535,7 +584,9 @@ plot <- taxa_tree +
 plot
 ```
 
-Heat maps find several other applications in biclustering and multi-assay analyses, that are discussed in chapters \@ref(biclustering) and \@ref(multi-assay_analyses), where the packages _cobiclust_ and _MOFA2_ are of interest.
+Heat maps find several other applications in biclustering and multi-assay
+analyses, that are discussed in chapters \@ref(biclustering) and
+\@ref(multi-assay_analyses), where the packages _cobiclust_ and _MOFA2_ are of interest.
 
 ### Differential abundance with visual comparisons
 
@@ -550,5 +601,5 @@ The packages _ALDEx2_, _ANCOM-BC_, _Maaslin2_ and _fido_, which were described i
 ## Session Info {-}
 
 ```{r sessionInfo, echo = FALSE, results = "asis"}
-#prettySessionInfo()
+prettySessionInfo()
 ```
