--- a/inst/pages/90_acknowledgments.qmd
+++ b/inst/pages/90_acknowledgments.qmd
@@ -146,16 +146,16 @@ and dissemination.
 
 ### How to contribute
 
-To contribute reports, follow the Git flow procedure (you can see instructions
-to [getting started with Github](https://docs.github.com/en/get-started)):
+To contribute to the project, please follow the Git flow procedure introduced below. See instructions
+to [get started with Github](https://docs.github.com/en/get-started)):
 
-1. Fork the project
-2. Clone your fork
-3. Modify the material
-4. Check locally that the changes render successfully (see above)
-5. Add and commit the changes to your fork
-6. Create a pull request (PR) from your fork back to the original repo
-7. Fix and discuss issues in the review process
+1. **Fork** the project
+2. **Clone** your fork
+3. **Modify** the material
+4. Check locally that the changes render successfully
+5. **Add** and **commit** the changes to your fork
+6. **Create a pull request** from your fork back to the original repository
+7. Fix and **discuss** issues in a review process
 
 More detailed instructions for contributing can be found on OMA [README](https://github.com/microbiome/OMA/blob/master/README.md).
 
