--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -676,41 +676,165 @@ Useful functions: runMDS, runRDA, anova.cca, transformAssay, mergeFeaturesByRank
 
 ### Standard analysis with ALDEx2
 
-1. Import the mia and ALDEx2 packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+1. Import the mia and ALDEx2 packages, load any of the example data sets
+   mentioned in Chapter 3.3 with `data` and store it into a variable named `tse`.
+
+```{r}
+#| label: ALDEx2-ex1
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+library(mia)
+library(ALDEx2)
+
+data("peerj13075", package = "mia")
+tse <- peerj13075
+```
+
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
+
+```{r}
+#| label: ALDEx2-ex2
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+tse <- subsetByPrevalentFeatures(tse,
+                                 rank = "genus",
+                                 prevalence = 0.1)
+```
+
 3. Model the counts assay of the TreeSE with `aldex.clr` and store it into the
    variable `x`. As a second argument, provide the grouping variable `Diet`,
    which is contained in a column of the colData.
-4. Feed `x` to the functions `aldex.ttest` to erform t-test and to `aldex.effect`
+
+```{r}
+#| label: ALDEx2-ex3
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+x <- aldex.clr(assay(tse), tse$Gender)
+```
+
+4. Feed `x` to the functions `aldex.ttest` to perform t-test and to `aldex.effect`
    to estimate effect sizes. Store the output into `x_tt` and `x_effect`,
    respectively.
+
+```{r}
+#| label: ALDEx2-ex4
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+x_tt <- aldex.ttest(x)
+x_effect <- aldex.effect(x, CI = TRUE)
+```
+
 5. Create a data.frame named `aldex_out` which includes both `x_tt` and `x_effect`
    and filter for the features with `wi.eBH < 0.05`. Are there any significantly
    differential abundance taxa?
+
+```{r}
+#| label: ALDEx2-ex5
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+aldex_out <- data.frame(x_tt, x_effect)
+
+aldex_out %>%
+  rownames_to_column(var = "Genus") %>%
+  filter(wi.eBH <= 0.05)  %>%
+  dplyr::select(Genus, we.eBH, wi.eBH, effect, overlap)
+```   
+
 6. **Extra**: If these results appear boring, repeat steps 1 - 5, but use
    `Gender` or `Age` as the grouping variable. Do we have any better luck with
    Gender? What is the problem with Age?
 
 ### Controlling for confounders {#sec-control-daa-confounders}
 
-1. Import the mia and MicrobiomeStat packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+1. Import the mia and MicrobiomeStat packages, load any of the example data sets
+   mentioned in Chapter 3.3 with `data` and store it into a variable named `tse`.
+
+```{r}
+#| label: confounders-ex1
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+library(mia)
+library(MicrobiomeStat)
+
+data("peerj13075", package = "mia")
+tse <- peerj13075
+```
+
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
+
+```{r}
+#| label: confounders-ex2
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+tse <- subsetByPrevalentFeatures(tse,
+                                 rank = "genus",
+                                 prevalence = 0.1)
+```
+
 3. Model the counts assay of the TreeSE with `linda` and store the output into
    a variable named `linda_out`. Provide the colData converted into a data.frame
    (with `as.data.frame`) as the second argument, and a `formula` with the Age,
    Gender and Diet as variables. For example, `formula = "~ A + B"` represents a
    formula with variables A and B.
+
+```{r}
+#| label: confounders-ex3
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+linda_out <- linda(as.data.frame(assay(tse, "counts")),
+                   as.data.frame(colData(tse)),
+                   formula = "~ Diet + Gender + Age")
+```
+
 4. Extract the `output$AgeElderly` object from `linda_out` with `$` and store it
    into a variable named `linda_res`.
+
+```{r}
+#| label: confounders-ex4
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+linda_res <- linda_out$output$AgeElderly
+```
+
 5. Filter `linda_res` for features with `reject == TRUE`. How many differentially
    abundant taxa were found? What are their names and how significant are they
    in terms of log-fold change and adjusted p-value?
+   
+```{r}
+#| label: confounders-ex5
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+linda_res %>%
+  filter(reject) %>%
+  dplyr::select(log2FoldChange, stat, padj) %>%
+  rownames_to_column(var = "feature")
+
+nrow(linda_res)
+```
 
 ### Comparing methods {#sec-compare-daa-methods}
 
@@ -718,22 +842,80 @@ Here, we conduct DAA with identical parameters as in the
 [previous exercise](#control-daa-confounders), but with a different method,
 namely ZicoSeq. We aim to compare the results between these two methods and draw better informed conclusions from such comparative approach.
 
-1. Import the mia and GUniFrac packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+1. Import the mia and GUniFrac packages, load any of the example data sets
+   mentioned in Chapter 3.3 with `data` and store it into a variable named `tse`.
+
+```{r}
+#| label: compating-methods-ex1
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+library(mia)
+library(GUniFrac)
+
+data("peerj13075", package = "mia")
+tse <- peerj13075
+```
+
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
+
+```{r}
+#| label: compating-methods-ex2
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+tse <- subsetByPrevalentFeatures(tse,
+                                 rank = "genus",
+                                 prevalence = 0.1)
+```
+
 3. Model the counts assay of the TreeSE with `ZicoSeq` as the `feature.dat`
    argument and store the output into a variable named `zicoseq_out`. Provide
    also the colData converted to a data.frame (with `as.data.frame`) as
    `meta.dat`. In addition, set `grp.name` to `"Age"`, `adj.name` to
    `c("Diet", "Gender")`, `feature.dat.type` to `"count"`, `return.feature.dat`
    to `TRUE` and `perm.no` to `999`.
+
+```{r}
+#| label: compating-methods-ex3
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+zicoseq_out <- ZicoSeq(feature.dat = as.matrix(assay(tse)),
+                       meta.dat = as.data.frame(colData(tse)),
+                       grp.name = "Age",
+                       adj.name = c("Diet", "Gender"), 
+                       feature.dat.type = "count",
+                       return.feature.dat = TRUE,
+                       perm.no = 999)
+```
+
 4. View the top six differentially abundant taxa and their adjusted p-values
    with `head(sort(zicoseq_out$p.adj.fdr))`. Is there any significant taxon
    according to ZicoSeq? Compared to the output of linda, do we see the same
    taxa at the top in terms of significance? Overall, to what extent do the two
    methods agree with one another?
+
+```{r}
+#| label: compating-methods-ex4
+#| eval: FALSE
+#| code-fold: true
+#| code-summary: "Show solution"
+
+zicoseq_res <- cbind.data.frame(p.raw = zicoseq_out$p.raw,
+                                p.adj.fdr = zicoseq_out$p.adj.fdr)
+
+zicoseq_res %>%
+  arrange(p.raw) %>%
+  head() %>%
+  knitr::kable()
+```
+
 
 ### Workflow 1
 
