update pages using taxonomyTree and addTaxonomyTree

--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -118,17 +118,17 @@ specified taxonomic rank.
 head(getUniqueFeatures(tse, rank = "Phylum"))
 ```
 
-### Generate a taxonomic tree on the fly {#sec-fly-tree}
+### Generate a hierarchy tree on the fly {#sec-fly-tree}
 
-To create a taxonomic tree, `taxonomyTree` used the information and returns a
+To create a hierarchy tree, `getHierarchyTree` used the information and returns a
 `phylo` object. Duplicate information from the `rowData` is removed.
 
 ```{r}
-taxonomyTree(tse)
+getHierarchyTree(tse)
 ```
 
 ```{r}
-tse <- addTaxonomyTree(tse)
+tse <- addHierarchyTree(tse)
 tse
 ```
 
