--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -186,7 +186,7 @@ top_phyla_mean <- getTopFeatures(altExp(tse,"Phylum"),
                              top=5L,
                              assay.type="counts")
 x <- unsplitByRanks(tse, ranks = taxonomyRanks(tse)[1:6])
-x <- addTaxonomyTree(x)
+x <- addHierarchyTree(x)
 ```
  
 After some preparation, the data is assembled and can be plotted with
